# recorder

./: .gitignore  Cargo.toml  recording.mkv
crates/gst-meet/: Cargo.toml
crates/gst-meet/src/: app.rs  config.rs  gst.rs  iq.rs  jingle.rs  lib.rs  main.rs  room.rs  room_manager.rs  sdp.rs  sdp_util.rs  xep.rs  xmpp.rs
crates/gst-meet/src/iq/: jingle_action.rs  jingle_media.rs
crates/gst-meet/src/jingle/: jingle_media.rs  jingle_util.rs  mod.rs
crates/gst-meet/src/macros/: mod.rs  stanza.rs
crates/gst-meet/src/sdp/: mod.rs  sdp_util.rs
crates/gst-meet/src/xmpp/: mod.rs
crates/gst-recorder/: Cargo.toml
crates/gst-recorder/config/: default.toml
crates/gst-recorder/src/: main.rs
temp/gst-meet/src/: app.rs  gst.rs  lib.rs  main.rs
temp/gst-meet/src/jingle/: jingle_media.rs  mod.rs
temp/gst-meet/src/sdp/: sdp_util.rs
