[package]
name = "gst-recorder"
version.workspace = true
edition.workspace = true

[dependencies]
libstrophe.workspace = true 
log.workspace = true
env_logger.workspace = true
tiny_http.workspace =  true
config.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde.workspace = true
gst-meet = {path = "../gst-meet"}
chrono.workspace = true
